5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1798_2565.log
== SUBMITION (2019-06-12 09:23:46) 
-- CODE:
from numpy import*

medias = array(eval(input("Medias: ")))
presenca = array(eval(input("Presenca: ")))
carga = int(input())
lista = zeros((3,), dtype=int)
i=0

while(i < size(medias)):
	if (medias[i] > 5 and presenca[i] >= (carga*(75/100))): lista[0]+=1
	elif(medias[i]<5): lista[1]+=1
	else: lista[2]+=1
	i+=1

print(lista)

-- EXECUTION TIME:
1.29217
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:08:23) 
-- CODE:
from numpy import*

medias = array(eval(input("Medias: ")))
presenca = array(eval(input("Presenca: ")))
carga = int(input())
lista = zeros((3,), dtype=int)
i=0

while(i < size(medias)):
	if (medias[i] > 5 and presenca[i] >= (carga*(75/100))): lista[0]+=1
	elif(medias[i]<5): lista[1]+=1
	else: lista[2]+=1
	i+=1

print(lista)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:09:24) 
-- CODE:
from numpy import*

medias = array(eval(input("Medias: ")))
presenca = array(eval(input("Presenca: ")))
carga = int(input())
lista = zeros((3,), dtype=int)
i=0

while(i < size(medias)):
	if (medias[i] > 5 and presenca[i] >= (carga*(75/100))): lista[0]+=1
	elif(medias[i]<5): lista[1]+=1
	else: lista[2]+=1
	i+=1

print(lista)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:09:28) 
-- CODE:
from numpy import*

medias = array(eval(input("Medias: ")))
presenca = array(eval(input("Presenca: ")))
carga = int(input())
lista = zeros((3,), dtype=int)
i=0

while(i < size(medias)):
	if (medias[i] > 5 and presenca[i] >= (carga*(75/100))): lista[0]+=1
	elif(medias[i]<5): lista[1]+=1
	else: lista[2]+=1
	i+=1

print(lista)

-- EXECUTION TIME:
0.764094
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:59:22) 
-- CODE:
from numpy import*

nt = array(eval(input("Medias: ")))
fq = array(eval(input("Frequencias: ")))
ch = array(eval(input("Carga horaria: ")))*75/100
v = zeros(3, dtype=int)

i = 0
while(i < size(m)):
	if (nt[i] >= 5) and (fq[i] >= ch[i]):
		v[0] = v[0] + 1
	elif (nt < 5):
		v[1] = v[1] + 1
	elif (fq < ch):
		v[2] = v[2] + 1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:59:28) 
-- CODE:
from numpy import*

nt = array(eval(input("Medias: ")))
fq = array(eval(input("Frequencias: ")))
ch = array(eval(input("Carga horaria: ")))*75/100
v = zeros(3, dtype=int)

i = 0
while(i < size(m)):
	if (nt[i] >= 5) and (fq[i] >= ch[i]):
		v[0] = v[0] + 1
	elif (nt < 5):
		v[1] = v[1] + 1
	elif (fq < ch):
		v[2] = v[2] + 1
		
print(v)
-- EXECUTION TIME:
0.975603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2565/main.py", line 9, in <module>
    while(i < size(m)):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:01:10) 
-- CODE:
from numpy import*

nt = array(eval(input("Medias: ")))
fq = array(eval(input("Frequencias: ")))
ch = array(eval(input("Carga horaria: ")))*75/100
v = zeros(3, dtype=int)

i = 0
while(i < size(m)):
	if (nt[i] >= 5) and (fq[i] >= ch[i]):
		v[0] = v[0] + 1
	elif (nt < 5):
		v[1] = v[1] + 1
	elif (fq < ch):
		v[2] = v[2] + 1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
